# web-workers-project-structure

./: .env.example  README.md  pyproject.toml
src/: alembic.ini  config.py
src/candidates_for_external_lib/: README.md  mixins.py  pagination.py  settings.py
src/candidates_for_external_lib/repositories/: base.py  mixin.py  queryset.py
src/candidates_for_external_lib/responses/: paginated.py
src/candidates_for_external_lib/sa/models/: mixins.py
src/candidates_for_external_lib/sqlalchemy/models/: base.py
src/db/: __init__.py
src/db/migrations/: env.py
src/db/migrations/versions/: 2025_05_15_1634-ff5b6f742d46.py  2025_05_16_1040-1fee2d9b528c.py
src/models/: __init__.py  base.py  help.py  users.py
src/shared/: constants.py
src/shared/repositories/: base.py  help.py  users.py
src/tasks/: brokers.py  constants.py  logging.py  scheduler.py  services.py  tasks.py
src/web/: __main__.py  app.py  dependencies.py  exceptions.py  i18n.py  middlewares.py  mixins.py
src/web/api/docs/: views.py
src/web/api/help/: filters.py  schemas.py  services.py  utils.py  views.py
src/web/api/monitoring/: views.py
