[tool.poetry]
name = "web-workers-project-structure"
version = "0.1.0"
description = ""
authors = ["albertalexandrov <albert-ugatu@list.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.12"
pydantic-settings = "^2.9.1"
sqlalchemy = "^2.0.40"
alembic = "^1.15.2"
uvicorn = "^0.34.2"
orjson = "^3.10.18"
asyncpg = "^0.30.0"
greenlet = "^3.2.2"
prometheus-fastapi-instrumentator = "^7.1.0"
sentry-sdk = {extras = ["fastapi"], version = "^2.28.0"}
fastapi-filter = "^2.0.1"
pydantic-i18n = "^0.4.5"
python-benedict = "^0.34.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
